--- a/laravel_smp/.env
+++ b/laravel_smp/.env
@@ -1,10 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=I-Viewer
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # Image Path
@@ -60,3 +61,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ADMIN_EMAIL=admin@email.com
+
